@@ -2,6 +2,10 @@
   ChangeLog for the eggleton-tools repository.  
   Please log (major) changes here (and add a short comment using svn commit -m 'Comment').
    
+   135: AstroFloyd, 21/08/2010
+     - created read_first_mdls from code in print_mdl_details
+     - call it from there and from plotmdl
+     
    134: AstroFloyd, 21/08/2010
      - move mdl functions from listmdl to mdl_functions
    
